<resources>
    <string name="app_name">Discount Calculator</string>
    <string name="cost_of_item">Cost of item.</string>
    <string name="what_is_your_discount">What is your discount?</string>
    <string name="_10">10%</string>
    <string name="_20">20%</string>
    <string name="_50">50%</string>
    <string name="other">Other:</string>
    <string name="_33">33%</string>
    <string name="calculate_discount">Calculate Discount</string>
    <string name="discount_amount">Discount Amount: %s</string>
    <string name="discounted_price">New Price: %s</string>
</resources>